--- a/styless.css
+++ b/styless.css
@@ -14,6 +14,11 @@ header {
     padding: 20px;
     background-color: #1AA7EC;
     color: #fff;
+	position: fixed ;
+	top: 0;
+	left: 0;
+	right: 0;
+	z-index: 1;
 }
 
 nav ul {
@@ -21,6 +26,9 @@ nav ul {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+	position: fixed;
+	right: 5%;
+	top: 5%;
 }
 
 nav li {
@@ -40,6 +48,10 @@ nav a:hover {
 
 section {
 	padding: 50px;
+}
+
+#home {
+	padding-top: 100px;
 }
 
 section h2 {
@@ -93,7 +105,6 @@ a:visited {
 	margin-right: auto;
 }
 
-
 .social-icons a {
 	display: inline-flex;
 	align-items: center;
@@ -117,7 +128,7 @@ a:visited {
 }
 
 /* Media queries */
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 992px) {
 	header {
 		padding: 10px;
 	}
@@ -142,3 +153,49 @@ a:visited {
 		padding: 8px 16px;
 	}
 }
+
+@media only screen and (max-width: 769px) {
+	nav {
+		position: relative;
+	  }
+	  nav button {
+		display: block;
+		position: absolute;
+		top: 5%;
+		right: 5%;
+		background: none;
+		border: none;
+		outline: none;
+		cursor: pointer;
+		z-index: 1;
+	  }	  
+	  nav ul {
+		display: block;
+		position: fixed;
+		top: 70px;
+		right: 0;
+		width: 100%;
+		height: calc(100% - 70px);
+		background-color: #1AA7EC;
+		transform: translateX(100%);
+		transition: transform 0.3s ease-in-out;
+	  }
+	  
+	  nav ul.open {
+		transform: translateX(0);
+	  }
+	  
+	  nav li {
+		display: block;
+		margin-bottom: 10px;
+	  }
+	  
+	  nav a {
+		display: block;
+		padding: 100%;
+		color: #fff;
+		text-align: center;
+	  }
+	  
+  }
+  
